--- a/css/style.css
+++ b/css/style.css
@@ -1,480 +1,433 @@
 /********** Template CSS **********/
 :root {
-  --primary: #06bbcc;
-  --light: #f0fbfc;
-  --dark: #181d38;
+    --primary: #06BBCC;
+    --light: #F0FBFC;
+    --dark: #181d38;
+}
+.fw-medium {
+    font-weight: 600 !important;
 }
 
-* {
-  box-sizing: border-box;
-  list-style: none;
-  text-decoration: none;
-  margin: 0;
-  scroll-behavior: smooth;
+.fw-semi-bold {
+    font-weight: 700 !important;
 }
-.container {
-  width: 90%;
-  margin: auto;
+
+.back-to-top {
+    position: fixed;
+    display: none;
+    right: 45px;
+    bottom: 45px;
+    z-index: 99;
 }
+
+
+/*** Spinner ***/
+#spinner {
+    opacity: 0;
+    visibility: hidden;
+    transition: opacity .5s ease-out, visibility 0s linear .5s;
+    z-index: 99999;
+}
+
+#spinner.show {
+    transition: opacity .5s ease-out, visibility 0s linear 0s;
+    visibility: visible;
+    opacity: 1;
+}
+
+
+/*** Button ***/
 .btn {
-  border: none;
-  border-radius: 3pt;
-}
-body {
-  list-style: none;
-  color: black;
-  font-family: Arial, Helvetica, sans-serif;
-  text-decoration: none;
-}
-.nav {
-  position: relative;
-  padding: 20px;
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
-  background: linear-gradient(#cccccc, #ffffff);
-  height: max-content;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-  transition: all 2s;
-
-}
-.logo {
-  font-size: 30px;
+    font-family: 'Nunito', sans-serif;
+    font-weight: 600;
+    transition: .5s;
 }
 
-.links ul {
-  display: flex;
-  justify-content: space-between;
-  align-items: center;
+.btn.btn-primary,
+.btn.btn-secondary {
+    color: #FFFFFF;
 }
-.links ul li {
-  padding: 12px 14px;
+
+.btn-square {
+    width: 38px;
+    height: 38px;
 }
-.links ul .join {
-  padding: 12px 30px;
-  background: #cccccc;
-  box-shadow: 0 8px 16px 0px rgba(0, 0, 0, 0.2);
+
+.btn-sm-square {
+    width: 32px;
+    height: 32px;
 }
-.menu {
-  width: 50px;
-  position: absolute;
-  top: 30px;
-  right: 20px;
-  height: 40px;
-  cursor: pointer;
-  display: none;
+
+.btn-lg-square {
+    width: 48px;
+    height: 48px;
 }
-.menu div {
-  background-color: black;
-  width: 40px;
-  height: 5px;
-  margin: 3px;
+
+.btn-square,
+.btn-sm-square,
+.btn-lg-square {
+    padding: 0;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-weight: normal;
+    border-radius: 0px;
 }
-.links a:hover{
-  color: black;
+
+
+/*** Navbar ***/
+.navbar .dropdown-toggle::after {
+    border: none;
+    content: "\f107";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    vertical-align: middle;
+    margin-left: 8px;
 }
-  .showMenu .links{
-    transition: all 1s;
+
+.navbar-light .navbar-nav .nav-link {
+    margin-right: 30px;
+    padding: 25px 0;
+    color: #FFFFFF;
+    font-size: 15px;
+    text-transform: uppercase;
+    outline: none;
+}
+
+.navbar-light .navbar-nav .nav-link:hover,
+.navbar-light .navbar-nav .nav-link.active {
+    color: var(--primary);
+}
+
+@media (max-width: 991.98px) {
+    .navbar-light .navbar-nav .nav-link  {
+        margin-right: 0;
+        padding: 10px 0;
+    }
+
+    .navbar-light .navbar-nav {
+        border-top: 1px solid #EEEEEE;
+    }
+}
+
+.navbar-light .navbar-brand,
+.navbar-light a.btn {
+    height: 75px;
+}
+
+.navbar-light .navbar-nav .nav-link {
+    color: var(--dark);
+    font-weight: 500;
+}
+
+.navbar-light.sticky-top {
+    top: -100px;
+    transition: .5s;
+}
+
+@media (min-width: 992px) {
+    .navbar .nav-item .dropdown-menu {
+        display: block;
+        margin-top: 0;
+        opacity: 0;
+        visibility: hidden;
+        transition: .5s;
+    }
+
+    .navbar .dropdown-menu.fade-down {
+        top: 100%;
+        transform: rotateX(-75deg);
+        transform-origin: 0% 0%;
+    }
+
+    .navbar .nav-item:hover .dropdown-menu {
+        top: 100%;
+        transform: rotateX(0deg);
+        visibility: visible;
+        transition: .5s;
+        opacity: 1;
+    }
+}
+
+
+/*** Header carousel ***/
+@media (max-width: 768px) {
+    .header-carousel .owl-carousel-item {
+        position: relative;
+        min-height: 500px;
+    }
+    
+    .header-carousel .owl-carousel-item img {
+        position: absolute;
+        width: 100%;
+        height: 100%;
+        object-fit: cover;
+    }
+}
+
+.header-carousel .owl-nav {
+    position: absolute;
+    top: 50%;
+    right: 8%;
+    transform: translateY(-50%);
+    display: flex;
+    flex-direction: column;
+}
+
+.header-carousel .owl-nav .owl-prev,
+.header-carousel .owl-nav .owl-next {
+    margin: 7px 0;
+    width: 45px;
+    height: 45px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: #FFFFFF;
+    background: transparent;
+    border: 1px solid #FFFFFF;
+    font-size: 22px;
+    transition: .5s;
+}
+
+.header-carousel .owl-nav .owl-prev:hover,
+.header-carousel .owl-nav .owl-next:hover {
+    background: var(--primary);
+    border-color: var(--primary);
+}
+
+.page-header {
+    background: linear-gradient(rgba(24, 29, 56, .7), rgba(24, 29, 56, .7)), url(../img/carousel-1.jpg);
+    background-position: center center;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.page-header-inner {
+    background: rgba(15, 23, 43, .7);
+}
+
+.breadcrumb-item + .breadcrumb-item::before {
+    color: var(--light);
+}
+
+
+/*** Section Title ***/
+.section-title {
+    position: relative;
+    display: inline-block;
+    text-transform: uppercase;
+}
+
+.section-title::before {
+    position: absolute;
+    content: "";
+    width: calc(100% + 80px);
+    height: 2px;
+    top: 4px;
+    left: -40px;
+    background: var(--primary);
+    z-index: -1;
+}
+
+.section-title::after {
+    position: absolute;
+    content: "";
+    width: calc(100% + 120px);
+    height: 2px;
+    bottom: 5px;
+    left: -60px;
+    background: var(--primary);
+    z-index: -1;
+}
+
+.section-title.text-start::before {
+    width: calc(100% + 40px);
+    left: 0;
+}
+
+.section-title.text-start::after {
+    width: calc(100% + 60px);
+    left: 0;
+}
+
+
+/*** Service ***/
+.service-item {
+    background: var(--light);
+    transition: .5s;
+}
+
+.service-item:hover {
+    margin-top: -10px;
+    background: var(--primary);
+}
+
+.service-item * {
+    transition: .5s;
+}
+
+.service-item:hover * {
+    color: var(--light) !important;
+}
+
+
+/*** Categories & Courses ***/
+.category img,
+.course-item img {
+    transition: .5s;
+}
+
+.category a:hover img,
+.course-item:hover img {
+    transform: scale(1.1);
+}
+
+
+/*** Team ***/
+.team-item img {
+    transition: .5s;
+}
+
+.team-item:hover img {
+    transform: scale(1.1);
+}
+
+
+/*** Testimonial ***/
+.testimonial-carousel::before {
+    position: absolute;
+    content: "";
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 0;
+    background: linear-gradient(to right, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
+    z-index: 1;
+}
+
+.testimonial-carousel::after {
+    position: absolute;
+    content: "";
+    top: 0;
+    right: 0;
+    height: 100%;
+    width: 0;
+    background: linear-gradient(to left, rgba(255, 255, 255, 1) 0%, rgba(255, 255, 255, 0) 100%);
+    z-index: 1;
+}
+
+@media (min-width: 768px) {
+    .testimonial-carousel::before,
+    .testimonial-carousel::after {
+        width: 200px;
+    }
+}
+
+@media (min-width: 992px) {
+    .testimonial-carousel::before,
+    .testimonial-carousel::after {
+        width: 300px;
+    }
+}
+
+.testimonial-carousel .owl-item .testimonial-text,
+.testimonial-carousel .owl-item.center .testimonial-text * {
+    transition: .5s;
+}
+
+.testimonial-carousel .owl-item.center .testimonial-text {
+    background: var(--primary) !important;
+}
+
+.testimonial-carousel .owl-item.center .testimonial-text * {
+    color: #FFFFFF !important;
+}
+
+.testimonial-carousel .owl-dots {
+    margin-top: 24px;
+    display: flex;
+    align-items: flex-end;
+    justify-content: center;
+}
+
+.testimonial-carousel .owl-dot {
+    position: relative;
+    display: inline-block;
+    margin: 0 5px;
+    width: 15px;
+    height: 15px;
+    border: 1px solid #CCCCCC;
+    transition: .5s;
+}
+
+.testimonial-carousel .owl-dot.active {
+    background: var(--primary);
+    border-color: var(--primary);
+}
+
+
+/*** Footer ***/
+.footer .btn.btn-social {
+    margin-right: 5px;
+    width: 35px;
+    height: 35px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    color: var(--light);
+    font-weight: normal;
+    border: 1px solid #FFFFFF;
+    border-radius: 35px;
+    transition: .3s;
+}
+
+.footer .btn.btn-social:hover {
+    color: var(--primary);
+}
+
+.footer .btn.btn-link {
     display: block;
-  }
-/*====== landpage=======*/
-.land {
-  height: 90vh;
-  position: relative;
-  background-color: black;
-}
-.land img {
-  position: absolute;
-  width: 100%;
-  top: 0;
-  left: 0;
-  object-fit: cover;
-  height: 90vh;
-  opacity: 0.5;
-}
-.c-land {
-  padding-top: 180px;
-  position: absolute;
-  color: white;
-}
-.c-land h1 {
-  font-size: 50px;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen,
-    Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
-}
-.c-land p {
-  font-style: italic;
-  text-shadow: 1px 2px 0 rgba(0, 0, 0, 0.2);
-}
-.c-land button {
-  padding: 12px 25px;
-  margin: 5px 10px;
-}
-.c-land .b1 {
-  background-color: #06bbcc;
-  font-size: large;
-}
-.c-land .b2 {
-  border: 1px #06bbcc solid;
-  color: black;
-  font-size: large;
-}
-.c-land .b1:hover {
-  background-color: #181d38;
-  color: white;
-}
-.c-land .b2:hover {
-  background-color: #06bbcc;
-}
-/*======section 2 ==========*/
-.sec-2 {
-  padding: 40px 0px;
-}
-.f-box {
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.f-box .cards {
-  padding: 20px 30px;
-  width: 23%;
-
-  text-align: center;
-  box-shadow: 0 8px 16px 0 rgba(0, 0, 0, 0.2);
-}
-.cards li {
-  margin-bottom: 10px;
-  color: #06bbcc;
+    margin-bottom: 5px;
+    padding: 0;
+    text-align: left;
+    color: #FFFFFF;
+    font-size: 15px;
+    font-weight: normal;
+    text-transform: capitalize;
+    transition: .3s;
 }
 
-/*====== section 3 ========*/
-
-.f-box .cards:hover {
-  transition: all 0.5s;
-  transform: scale(1.1);
-}
-.sec-3 {
-  padding: 40px 0px;
-  height: max-content;
-  background-color: #ddd;
-  overflow: hidden;
+.footer .btn.btn-link::before {
+    position: relative;
+    content: "\f105";
+    font-family: "Font Awesome 5 Free";
+    font-weight: 900;
+    margin-right: 10px;
 }
 
-.box2 {
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
+.footer .btn.btn-link:hover {
+    letter-spacing: 1px;
+    box-shadow: none;
 }
 
-.box2 .right {
-  width: 47%;
-}
-.box2 .left {
-  width: 47%;
-  position: relative;
-  overflow: hidden;
-}
-.box2 .left img {
-  position: absolute;
-  top: 0;
-  left: 0;
-  width: 100%;
-  object-fit: cover;
-  height: 100%;
+.footer .copyright {
+    padding: 25px 0;
+    font-size: 15px;
+    border-top: 1px solid rgba(256, 256, 256, .1);
 }
 
-.box2 .right h4 {
-  font-style: italic;
-  color: rgba(0, 0, 0, 0.8);
-}
-.box2 .right h2 {
-  font-size: 30px;
-  margin: 15px 0;
-  font-family: "Segoe UI", Tahoma, Geneva, Verdana, sans-serif;
-}
-.box2 .right p {
-  line-height: 140%;
-  color: rgba(0, 0, 0, 0.7);
-}
-.box22 {
-  padding: 20px 0;
-  display: flex;
-  justify-content: space-between;
-  flex-wrap: wrap;
-}
-.box22 div {
-  flex: 40%;
-  margin: 10px 0;
-}
-.box2 button {
-  font-size: larger;
-  padding: 12px 14px;
-  border: 1px #06bbcc solid;
-}
-.box2 button:hover {
-  background-color: #181d38;
-  color: wheat;
-}
-/*====== section 4 =========*/
-.sec-4 {
-  height: max-content;
-  padding-top: 50px;
-}
-.sec-4 .top{
-    text-align: center;
-}
-.sec-4 .top h4{font-style: italic; padding: 5px;}
-.sec-4 .top h1 {padding-bottom: 15px;}
-.grid{
-    display: grid;
-    grid-template-columns: repeat(6,16%);
-    grid-template-rows: repeat(2,180px);
-    height: 500px;
-    width: 100%;
-    gap: 15px;
-}
-.gridCard {position: relative; overflow: hidden;}
-.gridCard img{
-    position: absolute;
-    object-fit: cover;
-    top: 0;left: 0;width: 100%;height: 100%;
-    background-position: 100%;
-}
-.grid1{
-    grid-column: 1/4;
-    grid-row: 1/2;
-    width: 100%;
-}
-.grid2{
-    grid-row: 2/3;
-    grid-column:1/3 ;
-    width: 100%;
-}
-.grid3{ 
-    grid-row: 2/3;
-}
-.grid4{
-    grid-column: 4/7;
-    grid-row: 1/3;
+.footer .copyright a {
+    color: var(--light);
 }
 
-.post{
-    position: absolute;
-    right: 0;bottom: 0;width: 150px;height: 50px;
-    background-color: #ddd;
-    text-align: center;
-}
-.post h2{font-size: 18px;padding: 3px; font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;}
-.gridCard img:hover{
-    transition: all .8s;
-    transform: scale(1.2);
+.footer .footer-menu a {
+    margin-right: 15px;
+    padding-right: 15px;
+    border-right: 1px solid rgba(255, 255, 255, .1);
 }
 
-/*===== sec-5 =====*/
-.sec-5 {
-  height: max-content;
+.footer .footer-menu a:last-child {
+    margin-right: 0;
+    padding-right: 0;
+    border-right: none;
 }
-.sec-5 .top ,.sec-6 .top{
-  padding: 30px;
-  text-align: center;
-}
-.sec-5 .box2{
-  padding: 20px 0;
-}
-
-.card-box{
-  width: 30%;
-  height: max-content;
-  border: 1px #06bbcc solid;
-}
-.card-box  .div-top {
-  position: relative;
-  height: 230px;
-  overflow: hidden;
-}
-
-.card-box .div-top img{
-  position: absolute;
-  top: 0; left: 0; width: 100%; 
-  height: 100%;
-  object-fit: cover;
-}
-.card-box .div-top img:hover{
-  transition: all .8s;
-  transform: scale(1.2);
-}
-.card-box .div-top .button{
-  position: absolute;
-  bottom: 10%; left: 50%; width: max-content;
-  transform: translate(-50%);
-}
-.card-box .div-top .button button{
-  font-size: small;
-  padding: 5px;
-  background-color: transparent;
-  color: black;
-  transition: all 0.5s;
-  background-color: #06bbcc;
-}
-.card-box .div-top .button button:hover{
-  background-color: #181d38;
-  color: #06bbcc;
-  transform: scale(1.2);
-}
-.card-box .div-center{
-  text-align: center;
-  height:150px;
-  padding-top:20px;
-  font-size: 16px;
-}
-.card-box .div-center p{margin: 6px;}
-.card-box .div-center .p1{font-size:30px;}
-.card-box .div{
-  display: flex;
-  height: 30px;
-  border: 1px lightblue solid;
-  justify-content: space-between;
-  align-items: center;
-  
-}
-/*======section 6 */
-.sec-6{
-  height: max-content;
-  padding: 50px 0;
-}
-.flex-box{
-   display: flex;
-   flex-wrap: wrap;
-   justify-content: space-between;
-}
-.card-flex{
-  flex: 21%;
-  height: fit-content;
-  border-radius: 10pt;
-  background-color: #F0FBFC !important;
-}
-.card-flex .img-top{
-  position: relative;
-  overflow: hidden;
-  height: 180px;
-}
-.card-flex .img-top img{
-  position: absolute;
-  left: 0; top: 0; width:100%; height: 100%;
-  object-fit: cover;
-  }
-.card-flex .social{
-  height: 60px;
-  background-color: #181d38;
-  display: flex;
-  justify-content: center;
-  margin-top: -30px;
-}
-.card-flex .end-flex{
-  height: 70px;
-  text-align: center;
-  margin-top: 30px;
-  letter-spacing: 1px;
-  line-height: 160%;
-}
-
-/*=======footer========*/
-footer{
-  padding-top: 50px;
-  color: white;
-  background-color: #181d38 !important;
-}
-.foot1{
-  width: 100%;
-  display: flex;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.link{
-  width: 21%;
-  height: 250px;
-}
-.link h2{
-  padding-bottom: 20px;
-}
-.link1 a ,.link2 a{
-  display: block;
-  color: white;
-  padding-bottom: 5px;
-  transition: 0.5s;
-}
-.social a{
-  display: inline-block;
-}
-.social i:hover{
-  color: blueviolet;
-}
-.link2 i{
-  padding: 5px;
-  border: 1px #06bbcc solid ;
-  border-radius: 3pc;
-  
-}
-.link1 a:hover{
-  letter-spacing: 1px;
-}
-.gallary{
-  display: flex;
-  height: 180px;
-  width: 100%;
-  flex-wrap: wrap;
-  justify-content: space-between;
-}
-.gallary div{
-  position: relative;
-  flex: 30%;
-  height: max-content;
-  margin: 3px;
-}
-
-.gallary div img{
-  position: absolute;
-  width: 100%; top: 0;left: 0;
-  object-fit: cover;
-  height: 80px;
-}
-.link4 p{
-  line-height: 160%;
-  padding-bottom: 20px;
-}
-.link4 .input{
-  position: relative;
-  height: 40px;
-}
-.link4 .input input{
-  position: absolute;
-  height: 40px;
-  top: 0; left: 0; width: 100%;
-  border: none;
-  padding-left:10px ;
-}
-.link4 .input button{
-  position: absolute;
-  top: 15%; right: 10px;
-  transform: translate(-50% -50%);
-  border: 1px #181d38 solid;
-  width: 60px; height: 30px;
-  padding: 0;background-color: transparent;
-}
-.link4 .input button:hover{
-  background-color: #181d38;
-  color: white;
-  cursor: pointer;
-}
-
-
-
-
-
-
-
-
-
-
-
-
